--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.66.1"
   },
   "devDependencies": {
